--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,35 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.android.twoactivities">
+    package="com.example.securitycalling">
+    <uses-feature
+        android:name="android.hardware.microphone"
+        android:required="false"/>
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.TwoActivities">
-        <activity android:name=".LogIn"></activity>
+        android:theme="@style/Theme.SecurityCalling">
         <activity
-            android:name=".ui.login.LoginActivity"
-            android:label="@string/title_activity_login" />
-        <activity android:name=".PingingPage" />
-        <activity android:name=".SignUpActivity" />
-        <activity
-            android:name=".SecondActivity"
-            android:label="@string/activity2_name"
-            android:parentActivityName=".MainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.android.twoactivities.MainActivity" />
-        </activity>
-        <activity android:name=".MainActivity">
+            android:name=".LoginActivity"
+            android:label="Log In">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".CallActivity"
+            android:label="Make a Call"
+            android:screenOrientation="portrait">
+        </activity>
+
+
     </application>
 
 </manifest>
