--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.firebase:firebase-database'
     implementation 'com.google.firebase:firebase-firestore'
-
+    implementation 'com.google.firebase:firebase-messaging'
     implementation 'com.google.android.gms:play-services-location:18.0.0'
 
 
